--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@
 }
 
 html, body {
-    width: 100%;
-    height: 100%;
+    width: 99%;
+    height: 99%;
     margin: 0;
     padding: 0;
 }
@@ -409,6 +409,7 @@ body {
     background: var(--bg-dark);
     border-left: 1px solid var(--border);
     border-right: 1px solid var(--border);
+    overflow: auto;
 }
 
 .chat-header {
